components/longhorn-system/longhorn/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  labels:
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  annotations:
    gethomepage.dev/href: "https://longhorn.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/longhorn.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["longhorn.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: http
